overflow issue has been fixed

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -28,16 +28,26 @@
 
 .credit-cell {
   position: relative;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  width: 25vw;
+  margin: 1rem; /* adjust margin */
+  width: calc(100% / 4 - 2rem); /* four items per row */
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (max-width: 767px) {
+    width: calc(100% / 2 - 2rem); /* two items per row on smaller screens */
+  }
+
+  @media (max-width: 480px) {
+    width: 100%; /* one item per row on very small screens */
+    margin: 0.5rem 0; /* reduce margin */
+  }
 }
 
 .credit-cell img {
-  width: 30vh; /* Ensure the image covers the container's width */
+  width: 100%; /* set width to 100% of the container */
+  max-width: 150px; /* limit max width */
+  height: auto; /* maintain aspect ratio */
   object-fit: cover;
   border-radius: 1vh;
 }
@@ -45,6 +55,7 @@
 .credit-name {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 4vh;
+
   @media (max-width: 767px) {
     font-size: 2.5vh;
   }
@@ -64,4 +75,8 @@
   align-self: center;
   text-align: center;
   width: 70vw;
+
+  @media (max-width: 767px) {
+    width: 90vw; /* adjust width for smaller screens */
+  }
 }
